--- a/.github/workflows/build-custom-ios.yml
+++ b/.github/workflows/build-custom-ios.yml
@@ -7,16 +7,27 @@ on:
 
 jobs:
   build-custom-ios:
-    runs-on: macos-latest
+    name: iOS Build on macOS Sonoma
+    runs-on: macos-14
+    strategy:
+      matrix:
+        xcode: [ '15.4' ]  # Tu peux mettre '16.0' si tu veux tester avec Xcode 16
+    defaults:
+      run:
+        shell: bash
+
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: brew install cmake nasm yasm pkg-config
+        run: brew install autoconf automake libtool pkg-config curl git cmake nasm
 
-      - name: Build ffmpeg-kit ios full gpl
+      - name: set up xcode
+        run: echo "export DEVELOPER_DIR=/Applications/Xcode_${{ matrix.xcode }}.app/Contents/Developer" > ~/.xcode.for.ffmpeg.kit.sh
+        
+      - name: Build ffmpeg-kit ios
         run: ./ios.sh --xcframework --enable-ios-avfoundation --enable-ios-videotoolbox --enable-ios-audiotoolbox --enable-ios-libiconv --enable-ios-zlib
 
       - name: Upload XCFramework to GitHub Release
