--- a/.github/workflows/build-custom-ios.yml
+++ b/.github/workflows/build-custom-ios.yml
@@ -11,11 +11,10 @@ jobs:
     runs-on: macos-14
     strategy:
       matrix:
-        xcode: [ '15.4' ]  # Tu peux mettre '16.0' si tu veux tester avec Xcode 16
+        xcode: [ '15.4' ]
     defaults:
       run:
         shell: bash
-
 
     steps:
       - name: Checkout repo
@@ -24,15 +23,24 @@ jobs:
       - name: Install dependencies
         run: brew install autoconf automake libtool pkg-config curl git cmake nasm
 
-      - name: set up xcode
+      - name: Set up Xcode
         run: echo "export DEVELOPER_DIR=/Applications/Xcode_${{ matrix.xcode }}.app/Contents/Developer" > ~/.xcode.for.ffmpeg.kit.sh
-        
+
       - name: Build ffmpeg-kit ios
         run: ./ios.sh --xcframework --enable-ios-avfoundation --enable-ios-videotoolbox --enable-ios-audiotoolbox --enable-ios-libiconv --enable-ios-zlib
+
+      - name: Create prebuilt folder
+        run: mkdir -p prebuilt
+
+      - name: Verify framework presence
+        run: ls -la ffmpegkit.xcframework
+
+      - name: Zip built xcframework
+        run: zip -r prebuilt/ffmpeg-kit-full-${{ github.ref_name }}-ios-xcframework.zip ffmpegkit.xcframework
 
       - name: Upload XCFramework to GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          files: prebuilt/*.zip
+          files: prebuilt/ffmpeg-kit-full-${{ github.ref_name }}-ios-xcframework.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
