--- a/.github/workflows/build-custom-ios-tvos.yml
+++ b/.github/workflows/build-custom-ios-tvos.yml
@@ -27,7 +27,7 @@ jobs:
         run: echo "export DEVELOPER_DIR=/Applications/Xcode_${{ matrix.xcode }}.app/Contents/Developer" > ~/.xcode.for.ffmpeg.kit.sh
 
       - name: Build ffmpeg-kit for iOS
-        run: ./ios.sh --xcframework --enable-ios-avfoundation --enable-ios-videotoolbox --enable-ios-audiotoolbox --enable-ios-libiconv --enable-ios-zlib
+        run: ./ios.sh --xcframework --enable-ios-videotoolbox --enable-ios-libiconv --enable-ios-zlib
 
       - name: Create prebuilt folder
         run: mkdir -p prebuilt
@@ -69,7 +69,7 @@ jobs:
         run: echo "export DEVELOPER_DIR=/Applications/Xcode_${{ matrix.xcode }}.app/Contents/Developer" > ~/.xcode.for.ffmpeg.kit.sh
 
       - name: Build ffmpeg-kit for tvOS
-        run: ./tvos.sh --xcframework --enable-tvos-avfoundation --enable-tvos-videotoolbox --enable-tvos-audiotoolbox --enable-tvos-libiconv --enable-tvos-zlib
+        run: ./tvos.sh --xcframework --enable-tvos-videotoolbox --enable-tvos-libiconv --enable-tvos-zlib
 
       - name: Create prebuilt folder
         run: mkdir -p prebuilt
